syntax = "proto3";

option go_package = "./pb";

package pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------鎶藉琛?-------------------------------
message Lottery {
  int64 id = 1; //id
  int64 userId = 2; //鍙戣捣鎶藉鐢ㄦ埛ID
  string name = 3; //榛樿鍙栦竴绛夊鍚嶇О
  string thumb = 4; //榛樿鍙栦竴绛夌粡閰嶅浘
  int64 publishType = 5; //寮€濂栬缃細1鎸夋椂闂村紑濂?2鎸変汉鏁板紑濂?3鍗虫娊鍗充腑
  int64 publishTime = 6; //寮€濂栨椂闂?  int64 joinNumber = 7; //鑷姩寮€濂栦汉鏁?  string introduce = 8; //鎶藉璇存槑
  int64 awardDeadline = 9; //棰嗗鎴鏃堕棿
  int64 createTime = 10; //createTime
  int64 updateTime = 11; //updateTime
  int64 isSelected = 12; //鏄惁绮鹃€?1鏄?0鍚?
}

message AddLotteryReq {
  int64 userId = 1; //鍙戣捣鎶藉鐢ㄦ埛ID
  string name = 2; //榛樿鍙栦竴绛夊鍚嶇О
  string thumb = 3; //榛樿鍙栦竴绛夌粡閰嶅浘
  int64 publishType = 4; //寮€濂栬缃細1鎸夋椂闂村紑濂?2鎸変汉鏁板紑濂?3鍗虫娊鍗充腑
  int64 publishTime = 5; //寮€濂栨椂闂?  int64 joinNumber = 6; //鑷姩寮€濂栦汉鏁?  string introduce = 7; //鎶藉璇存槑
  int64 awardDeadline = 8; //棰嗗鎴鏃堕棿
  int64 isSelected = 9; //鏄惁绮鹃€?1鏄?0鍚
}

message AddLotteryResp {
}

message UpdateLotteryReq {
  int64 id = 1; //id
  int64 userId = 2; //鍙戣捣鎶藉鐢ㄦ埛ID
  string name = 3; //榛樿鍙栦竴绛夊鍚嶇О
  string thumb = 4; //榛樿鍙栦竴绛夌粡閰嶅浘
  int64 publishType = 5; //寮€濂栬缃細1鎸夋椂闂村紑濂?2鎸変汉鏁板紑濂?3鍗虫娊鍗充腑
  int64 publishTime = 6; //寮€濂栨椂闂?  int64 joinNumber = 7; //鑷姩寮€濂栦汉鏁?  string introduce = 8; //鎶藉璇存槑
  int64 awardDeadline = 9; //棰嗗鎴鏃堕棿
  int64 isSelected = 10; //鏄惁绮鹃€?1鏄?0鍚?}
}

message UpdateLotteryResp {
}

message DelLotteryReq {
  int64 id = 1; //id
}

message DelLotteryResp {
}

message GetLotteryByIdReq {
  int64 id = 1; //id
}

message GetLotteryByIdResp {
  Lottery lottery = 1; //lottery
}

message SearchLotteryReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //id
  int64 userId = 4; //鍙戣捣鎶藉鐢ㄦ埛ID
  string name = 5; //榛樿鍙栦竴绛夊鍚嶇О
  string thumb = 6; //榛樿鍙栦竴绛夌粡閰嶅浘
  int64 publishType = 7; //寮€濂栬缃細1鎸夋椂闂村紑濂?2鎸変汉鏁板紑濂?3鍗虫娊鍗充腑
  int64 publishTime = 8; //寮€濂栨椂闂?  int64 joinNumber = 9; //鑷姩寮€濂栦汉鏁?  string introduce = 10; //鎶藉璇存槑
  int64 awardDeadline = 11; //棰嗗鎴鏃堕棿
  int64 createTime = 12; //createTime
  int64 updateTime = 13; //updateTime
  int64 isSelected = 14; //鏄惁绮鹃€?1鏄?0鍚?}
}
message SearchLotteryResp {
  repeated Lottery lottery = 1; //lottery
}

//--------------------------------濂栧搧琛?-------------------------------
message Prize {
  int64 id = 1; //id
  int64 lotteryId = 2; //鎶藉ID
  int64 type = 3; //濂栧搧绫诲瀷锛?濂栧搧 2浼樻儬鍒?3鍏戞崲鐮?4鍟嗗煄 5寰俊绾㈠寘灏侀潰 6绾㈠寘
  string name = 4; //濂栧搧鍚嶇О
  int64 count = 5; //濂栧搧浠芥暟
  int64 grantType = 6; //濂栧搧鍙戞斁鏂瑰紡锛?蹇€掗偖瀵?2璁╀腑濂栬€呰仈绯绘垜 3涓鑰呭～鍐欎俊鎭?4璺宠浆鍒板叾浠栧皬绋嬪簭
  int64 createTime = 7; //createTime
  int64 updateTime = 8; //updateTime
}

message AddPrizeReq {
  int64 lotteryId = 1; //鎶藉ID
  int64 type = 2; //濂栧搧绫诲瀷锛?濂栧搧 2浼樻儬鍒?3鍏戞崲鐮?4鍟嗗煄 5寰俊绾㈠寘灏侀潰 6绾㈠寘
  string name = 3; //濂栧搧鍚嶇О
  int64 count = 4; //濂栧搧浠芥暟
  int64 grantType = 5; //濂栧搧鍙戞斁鏂瑰紡锛?蹇€掗偖瀵?2璁╀腑濂栬€呰仈绯绘垜 3涓鑰呭～鍐欎俊鎭?4璺宠浆鍒板叾浠栧皬绋嬪簭
}

message AddPrizeResp {
}

message UpdatePrizeReq {
  int64 id = 1; //id
  int64 lotteryId = 2; //鎶藉ID
  int64 type = 3; //濂栧搧绫诲瀷锛?濂栧搧 2浼樻儬鍒?3鍏戞崲鐮?4鍟嗗煄 5寰俊绾㈠寘灏侀潰 6绾㈠寘
  string name = 4; //濂栧搧鍚嶇О
  int64 count = 5; //濂栧搧浠芥暟
  int64 grantType = 6; //濂栧搧鍙戞斁鏂瑰紡锛?蹇€掗偖瀵?2璁╀腑濂栬€呰仈绯绘垜 3涓鑰呭～鍐欎俊鎭?4璺宠浆鍒板叾浠栧皬绋嬪簭
}

message UpdatePrizeResp {
}

message DelPrizeReq {
  int64 id = 1; //id
}

message DelPrizeResp {
}

message GetPrizeByIdReq {
  int64 id = 1; //id
}

message GetPrizeByIdResp {
  Prize prize = 1; //prize
}

message SearchPrizeReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //id
  int64 lotteryId = 4; //鎶藉ID
  int64 type = 5; //濂栧搧绫诲瀷锛?濂栧搧 2浼樻儬鍒?3鍏戞崲鐮?4鍟嗗煄 5寰俊绾㈠寘灏侀潰 6绾㈠寘
  string name = 6; //濂栧搧鍚嶇О
  int64 count = 7; //濂栧搧浠芥暟
  int64 grantType = 8; //濂栧搧鍙戞斁鏂瑰紡锛?蹇€掗偖瀵?2璁╀腑濂栬€呰仈绯绘垜 3涓鑰呭～鍐欎俊鎭?4璺宠浆鍒板叾浠栧皬绋嬪簭
  int64 createTime = 9; //createTime
  int64 updateTime = 10; //updateTime
}

message SearchPrizeResp {
  repeated Prize prize = 1; //prize
}



// ------------------------------------ 
// Rpc Func
// ------------------------------------ 

service lottery{
  //-----------------------鎶藉琛?----------------------
  rpc AddLottery(AddLotteryReq) returns (AddLotteryResp);
  rpc UpdateLottery(UpdateLotteryReq) returns (UpdateLotteryResp);
  rpc DelLottery(DelLotteryReq) returns (DelLotteryResp);
  rpc GetLotteryById(GetLotteryByIdReq) returns (GetLotteryByIdResp);
  rpc SearchLottery(SearchLotteryReq) returns (SearchLotteryResp);
  //-----------------------濂栧搧琛?----------------------
  rpc AddPrize(AddPrizeReq) returns (AddPrizeResp);
  rpc UpdatePrize(UpdatePrizeReq) returns (UpdatePrizeResp);
  rpc DelPrize(DelPrizeReq) returns (DelPrizeResp);
  rpc GetPrizeById(GetPrizeByIdReq) returns (GetPrizeByIdResp);
  rpc SearchPrize(SearchPrizeReq) returns (SearchPrizeResp);
}
