syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message User {
  int64 id = 1;
  string mobile = 2;
  string nickname = 3;
  int64  sex = 4;
  string avatar = 5;
  string info = 6;
  int64 isAdmin = 7;
}

message UserAuth {
  int64  id = 1;
  int64  userId = 2;
  string authType = 3;
  string authKey = 4;
}


//req 、resp
message RegisterReq {
  string mobile = 1;
  string nickname = 2;
  string password = 3;
  string authKey = 4;
  string authType = 5;
}
message RegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message WXMiniRegisterReq {
  string nickname = 1;
  string avatar = 2;
  string authKey = 3;
  string authType = 4;
}

message WXMiniRegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message LoginReq {
  string  authType = 1;
  string authKey = 2;
  string  password = 3;
}
message LoginResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GetUserInfoReq {
  int64  id = 1;
}
message GetUserInfoResp {
  User user = 1;
}

message GetUserAuthByAuthKeyReq {
  string  authKey = 1;
  string  authType = 2;
}
message GetUserAuthByAuthKeyResp {
  UserAuth userAuth = 1;
}

message GetUserAuthByUserIdReq {
  int64  userId = 1;
  string  authType = 2;
}
message GetUserAuthyUserIdResp {
  UserAuth userAuth = 1;
}

message GenerateTokenReq {
  int64 userId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message UpdateUserBaseInfoReq {
  int64 id = 1;
  string Nickname = 2;
  int64 sex = 3;
  string avatar = 4;
  string info = 5;
}

message UpdateUserBaseInfoResp {
}


message SetAdminReq {
  int64 userId = 1;
}
message SetAdminResp {
}

message CheckIsAdminReq {
  int64 userId = 1;
}
message CheckIsAdminResp {
  bool isAdmin = 1;
}
//--------------------------------用户联系方式-------------------------------
message UserContact {
  int64 id = 1; //id
  int64 userId = 2; //userId
  int64 type = 3; //1qrcode 2phone 3shop
  string content = 4; //content
  string remark = 5; //remark
  int64 createTime = 6; //createTime
  int64 updateTime = 7; //updateTime
}

message AddUserContactReq {
  int64 userId = 1; //userId
  int64 type = 2; //1qrcode 2phone 3shop
  string content = 3; //content
  string remark = 4; //remark
}

message AddUserContactResp {
  int64 Id = 1; //Id
}

message UpdateUserContactReq {
  int64 id = 1; //id
  int64 userId = 2; //userId
  int64 type = 3; //1qrcode 2phone 3shop
  string content = 4; //content
  string remark = 5; //remark
}

message UpdateUserContactResp {
}

message DelUserContactReq {
  int64 id = 1; //id
}

message DelUserContactResp {
}

message GetUserContactByIdReq {
  int64 id = 1; //id
}

message GetUserContactByIdResp {
  UserContact userContact = 1; //userContact
}

message SearchUserContactReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //id
  int64 userId = 4; //userId
  int64 type = 5; //1qrcode 2phone 3shop
  string content = 6; //content
  string remark = 7; //remark
  int64 createTime = 8; //createTime
  int64 updateTime = 9; //updateTime
}

message SearchUserContactResp {
  repeated UserContact userContact = 1; //userContact
}

//--------------------------------用户收货地址表--------------------------------
message UserAddress {
  int64 id = 1; //id
  int64 userId = 2; //用户id
  string contactName = 3; //联系人姓名
  string contactMobile = 4; //联系人手机号码
  string district = 5; //地区信息
  string detail = 6; //详细地址
  string postcode = 7; //邮政编码
  int64 isDefault = 8; //是否为默认地址 1是 0否
  int64 createTime = 9; //createTime
  int64 updateTime = 10; //updateTime
}

message AddUserAddressReq {
  int64 userId = 1; //用户id
  string contactName = 2; //联系人姓名
  string contactMobile = 3; //联系人手机号码
  string district = 4; //地区信息
  string detail = 5; //详细地址
  string postcode = 6; //邮政编码
  int64 isDefault = 7; //是否为默认地址 1是 0否
}

message AddUserAddressResp {
  int64 id = 1; //地址id
}

message UpdateUserAddressReq {
  int64 id = 1; //id
  int64 userId = 2; //用户id
  string contactName = 3; //联系人姓名
  string contactMobile = 4; //联系人手机号码
  string district = 5; //地区信息
  string detail = 6; //详细地址
  string postcode = 7; //邮政编码
  int64 isDefault = 8; //是否为默认地址 1是 0否
}

message UpdateUserAddressResp {
}

message DelUserAddressReq {
  int64 id = 1; //id
}

message DelUserAddressResp {
}

message GetUserAddressByIdReq {
  int64 id = 1; //id
}

message GetUserAddressByIdResp {
  UserAddress userAddress = 1; //userAddress
}

message SearchUserAddressReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //id
  int64 userId = 4; //用户id
  string contactName = 5; //联系人姓名
  string contactMobile = 6; //联系人手机号码
  string district = 7; //地区信息
  string detail = 8; //详细地址
  string postcode = 9; //邮政编码
  int64 isDefault = 10; //是否为默认地址 1是 0否
  int64 createTime = 11; //createTime
  int64 updateTime = 12; //updateTime
}

message SearchUserAddressResp {
  repeated UserAddress userAddress = 1; //userAddress
}



//service
service usercenter {
  rpc login(LoginReq) returns(LoginResp);
  rpc register(RegisterReq) returns(RegisterResp);
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc getUserAuthByAuthKey(GetUserAuthByAuthKeyReq) returns(GetUserAuthByAuthKeyResp);
  rpc getUserAuthByUserId(GetUserAuthByUserIdReq) returns(GetUserAuthyUserIdResp);
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  rpc updateUserBaseInfo(UpdateUserBaseInfoReq) returns(UpdateUserBaseInfoResp);
  rpc setAdmin(SetAdminReq) returns(SetAdminResp);
  rpc CheckIsAdmin(CheckIsAdminReq) returns(CheckIsAdminResp);
  rpc WxMiniRegister(WXMiniRegisterReq) returns (WXMiniRegisterResp);
  //-----------------------用户联系方式----------------------
  rpc AddUserContact(AddUserContactReq) returns (AddUserContactResp);
  rpc UpdateUserContact(UpdateUserContactReq) returns (UpdateUserContactResp);
  rpc DelUserContact(DelUserContactReq) returns (DelUserContactResp);
  rpc GetUserContactById(GetUserContactByIdReq) returns (GetUserContactByIdResp);
  rpc SearchUserContact(SearchUserContactReq) returns (SearchUserContactResp);
  //-----------------------用户收货地址表-----------------------
  rpc AddUserAddress(AddUserAddressReq) returns (AddUserAddressResp);
  rpc UpdateUserAddress(UpdateUserAddressReq) returns (UpdateUserAddressResp);
  rpc DelUserAddress(DelUserAddressReq) returns (DelUserAddressResp);
  rpc GetUserAddressById(GetUserAddressByIdReq) returns (GetUserAddressByIdResp);
  rpc SearchUserAddress(SearchUserAddressReq) returns (SearchUserAddressResp);
}
